2017-12-14  Jonathan Wakely  <jwakely@redhat.com>

	* testsuite/26_numerics/complex/dr2714.cc: Move to ...
	* testsuite/26_numerics/complex/inserters_extractors/char/dr2714.cc:
	... Here. Remove duplicate header and dg-options. Check first invalid
	character gets putback. Remove wchar_t test.

2017-12-13  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/59568
	* include/std/complex (operator>>): Implement proposed resolution to
	LWG 2714. Use putback if and only if a character has been successfully
	extracted but isn't a delimiter. Use ctype::widen and traits::eq when
	testing if extracted characters match delimiters.
	* testsuite/26_numerics/complex/dr2714.cc: New test.

2017-12-12  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/83395
	* include/std/type_traits (__is_invocable_impl): Remove partial
	specialization for INVOKE<void> and restore is_void<R> check in
	primary template.
	(__is_nt_invocable_impl): Likewise.
	* testsuite/20_util/is_invocable/83395.cc: New test.
	* testsuite/20_util/is_nothrow_invocable/83395.cc: New test.

2017-12-07  David Edelsohn  <dje.gcc@gmail.com>

	PR libstdc++/83120
	* testsuite/ext/special_functions/hyperg/check_value.cc: Add
	-ffp-contract=off. Add -ffloat-store for m68* and ia32.
	* testsuite/tr1/5_numerical_facilities/special_functions/17_hyperg/check_value.cc: Same.

2017-12-07  Martin Sebor  <msebor@redhat.com>

	PR c/81544
	* include/ext/mt_allocator.h (_M_destroy_thread_key): Remove
	attribute const.

2017-12-05  Jason Merrill  <jason@redhat.com>
	    Jonathan Wakely  <jwakely@redhat.com>

	* include/bits/fs_fwd.h (copy, copy_file): Remove noexcept.
	(permissions): Add noexcept.
	* include/bits/fs_ops.h (permissions): Add noexcept.
	* libsupc++/eh_throw.cc (__cxa_init_primary_exception): Add
	_GLIBCXX_NOTHROW.

2017-12-04  Jonathan Wakely  <jwakely@redhat.com>

	* include/bits/regex_compiler.tcc: Use C-style comment to work around
	PR preprocessor/61638.