@@ -1,5 +1,8 @@
 2017-12-14  Jonathan Wakely  <jwakely@redhat.com>
 
+	* testsuite/26_numerics/complex/inserters_extractors/char/dr2714.cc:
+	Add tests using noskipws.
+
 	* testsuite/26_numerics/complex/dr2714.cc: Move to ...
 	* testsuite/26_numerics/complex/inserters_extractors/char/dr2714.cc:
 	... Here. Remove duplicate header and dg-options. Check first invalid
